--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>DEMO</title>
+    <title>ずんだもちを食べるゲーム</title>
 
     <!-- font読み込み -->
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
